--- a/ps_1_question_3.Rmd
+++ b/ps_1_question_3.Rmd
@@ -13,6 +13,7 @@ authors: Futing Chen, Will Parker
 
 ```{r, cache = FALSE}
 library(tidyverse)
+library(knitr)
 ```
 
 ```{r setup, include=FALSE}
@@ -45,7 +46,7 @@ data <- tibble(X_0 = X_0,
                X_1 = X_1,
                U = U) 
 
-knitr::kable(head(data))
+kable(head(data))
 ```
 
 Finally, compute the $Y$'s
@@ -73,7 +74,7 @@ Y <- data$Y
 
 beta_n <- solve(t(X)%*%X)%*%t(X)%*%Y
 
-beta_n
+kable(beta_n)
 ```
 
 ## Standard errors 
@@ -94,7 +95,7 @@ V <- solve(t(X)%*%X)*sigma_sq_hat
 
 se <- sqrt(diag(V))
 
-se
+kable(se)
 ```
 
 ### Verifying with statistical software
