--- a/PS_5.Rmd
+++ b/PS_5.Rmd
@@ -18,7 +18,7 @@ knitr::opts_chunk$set(cache = FALSE, echo = TRUE, warning = FALSE, message = FAL
 ```
 
 ```{r, cache = FALSE}
-library(tidyverse)
+library(dplyr)
 library(knitr)
 library(haven)
 ```
@@ -27,7 +27,6 @@ library(haven)
 # 1. Describe the data
 ```{r}
 data <- read_dta("PS5.dta")
-
 psych::describe(data) %>% 
   select(n, mean, sd, median, min, max) %>%
   kable(digits = 2)
@@ -43,11 +42,8 @@ $i$ denotes restaurant, $k$ denotes state, and $t = 0$ if the observation is fro
 for_regression <- data %>%
   select(empft, minwage,nregs, hrsopen, d2, d3, d4) %>%
   na.omit()
-
 regress_formula <- formula(empft ~ minwage + nregs + hrsopen + d2 + d3 + d4)
-
 linear_model <- lm(regress_formula, data = for_regression)
-
 stargazer::stargazer(linear_model, header = FALSE)
 ```
 
@@ -64,7 +60,6 @@ confint.lm(linear_model, level = 0.9)[2,]
 SSE <- sum(linear_model$residuals^2)
 SST <- var(for_regression$empft)*(for_regression %>% nrow() -1)
 SSR <- SST - SSE
-
 R2 <- SSR/SST
 root_MSE <- sqrt(SSE/(for_regression %>% nrow()))
 ```
@@ -73,7 +68,7 @@ The $R^2 =$ `r round(R2, 2)` and the $MSE =$ `r round(root_MSE, 1)`
 
 # 5. Give an economic interpretation of the coefficients $\eta_2, \eta_3, \eta_4$. What might explain the relatively large coefficient on -d4-?
 
-These are fixed effects for each restaurant, specifically the average difference in number of employees relative to burger king. d-1 The large coefficient $\eta_4$ means that Wendy's employed `r round(linear_model$coefficients['d4'], 2) %>% as.numeric()` more people on average than Burger King, adjusted for the other variables in the regression.
+These are fixed effects for each restaurant, specifically the average difference in number of employees relative to burger king. d-1 The large coefficient $\eta_4$ means that Wendy's employed `r round(linear_model$coefficients['d4'], 2) %>% as.numeric()` more people on average than Burger King, adjusted for the other variables in the regression. One possible explanation is that Wendy's has more customers and hence hires more employers.
 
 # 6. Test $H0: \eta_2 = \eta_3 = 0$
 ```{r}
@@ -84,16 +79,10 @@ We can reject the hypothesis $\eta_2 = \eta_3 = 0$ at a significane level of $\a
 # 7. Test the hypothesis $H_0 : \eta_2 = \eta_3$ using the estimated covariance matrix of the coefficients. Verify your answer by running the test in Stata using and/or by performing an F-test. We now want to control for potential selection issues by using the panel structure of our data.
 
 ```{r}
-
-
 cov_matrix <- vcov(linear_model)
-
 beta <- linear_model$coefficients
-
 R <- c(0,0,0, 0, 1, -1, 0)
-
 n_sample <- for_regression %>% nrow()
-
 t(R)%*%beta
 ```
 
@@ -106,4 +95,50 @@ car::linearHypothesis(linear_model, c("d2 = d3"))
 ```
 
 # 8. Explain why the previous estimate of $\lambda$ is likely to suffer from omitted variable bias.
+$\lambda$ suffer from omitted variable bias if some of the unobservables that affect the number of employees are correlated with minimum wage. The omitted variable bias is likely because one can imagine many such unobservables such as unmeasured conditions of state economies or demographics. For example, some states have higher per capita income or the age structure is younger. These characteristics are potentially positively correlated with $minwage$ and $empft$; then $\gamma$ is upwardly biased.
 
+# 9. Assume that $\epsilon_{ikt} = \mu_k + \zeta_t + u_{ikt}$ and that $E[u_{ikt}|X_{ikt}] = 0$ (where X_{ikt} is the vector of RHS-variables in (2) except -minwage-). Explain how you can then use the increase in the minimum wage in New Jersey and a difference-in-differences (DD) model to identify the effect of the minimum wage on employment. Give an example where the necessary assumption(s) are violated.
+Since $\epsilon_{ikt} = \mu_k + \zeta_t + u_{ikt}$, we know
+\[Y=\alpha+\gamma minwage_{kt}+X_{ikt}^{'}\beta+\mu_k+\zeta_t+u_{ikt} \]
+Then $E[u_{ikt}|X_{ikt}] = 0$ implies
+\begin{align*}
+E[Y|post=1, state=1, X_{ikt}]-E[Y|post=0, state=1, X_{ikt}]&=\gamma \Delta minwage+(\zeta_1-\zeta_0)\\
+E[Y|post=1, state=0, X_{ikt}]-E[Y|post=0, state=0, X_{ikt}]&=(\zeta_1-\zeta_0)
+\end{align*}
+Thus, 
+\begin{align*}
+&\{E[Y|post=1, state=1, X_{ikt}]-E[Y|post=0, state=1, X_{ikt}]\} \\
+-&\{E[Y|post=1, state=0, X_{ikt}]-E[Y|post=0, state=0, X_{ikt}]\}=\gamma \Delta minwage
+\end{align*}
+Hence, we can use the following DD model:
+\[empft_{ikt} =\pi_0+\delta_{kt} state_{k}*post_t+ \pi_1state_{k}+\pi_2post_t+X_{ikt}^{'}\beta + u_{ikt}\]
+and the DD estimator $\delta_{kt}$ will identify the effect of the minimum wage on employment.\par
+The necessary assumption is common trend in the absence of intervation:
+\[E[Y_1^0-Y_0^0|D_1=1]=E[Y_1^0-Y_0^0|D_1=0]\]
+This would be  violated if, for example, the employment of one state (say, New Jersey) benefited more from progressive federal policies than Pennsylvania.
+
+# 10. Generate a table of means, a table of standard errors and a table of frequencies for -empft- in each state and each time period (post = 1 and post = 0).
+```{r}
+with(data, tapply(empft, list(state=state,post=post), mean,na.rm=T) )
+with(data, tapply(empft, list(state=state,post=post), sd,na.rm=T) )
+filter(data, !is.na(empft)) %>% 
+  with(., tapply(empft, list(state=state,post=post), length) )
+```
+
+# 11. Using these statistics, calculate a DD estimate of the impact of the minimum wage law on employment.
+
+```{r}
+(8.446875-7.732308)-(7.651316-10.311688)
+```
+
+# 12. Specify and estimate the corresponding regression.
+The regression corresponding to (11) is 
+\[empft_{ikt}=\pi_0+\delta state_{k}*post_t+\pi_1state_{k}+\pi_2post_t+v_{ikt}\]
+```{r}
+DID1<-lm(empft~state*post,data=data); summary(DID1)
+```
+
+We can also add covariates and estimate
+```{r}
+DID2<-lm(empft~state*post+nregs+hrsopen+d2+d3+d4,data=data); summary(DID2)
+```
